--- a/static/app.css
+++ b/static/app.css
@@ -8,15 +8,46 @@
 header {
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
     > .actions {
         display: flex;
         gap: 1rem;
+   
+        > button {
+        border-radius: 50%; 
+        background-color: black;
+        color: white;
+        border: none;
+        padding: 0 0.5rem;
+        } 
     }
-    > .button {
-       border-radius: 50%; 
-       background-color: black;
-       color: white;
+}
+
+.banner {
+    position: relative;
+     width: 100%;
+     height: 11rem;
+     background-color: pink;
+     > .avatar {
+        position: absolute;
+        bottom: -1.5rem;
+        left: 1rem;
+        background-color: gray;
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+     }
+  
+}
+
+main {
+    > .data {
+        > button {
+            display: flex;
+            justify-self: flex-end;
+            background-color: black;
+            color: white;
+        }   
     }
 }
 
